* created pwa * fixed jdbc warning * new gradle run task * new gradle jar-build task